--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
             <div class="social-media">
                 <a href="https://github.com/thepraveen-k?tab=repositories"><i class="fa-brands fa-github"></i></a>
-                <a href="www.linkedin.com/in/thepraveen-k"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/thepraveen-k/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/thepraveenmc?igsh=NTc4MTIwNjQ2YQ=="><i class="fa-brands fa-instagram"></i></a>
-                <a href="mailto:your-thepraveen2023@gmail.com"> <i class="fa-solid fa-envelope"></i></a>
-                <a href="https://wa.me/8778244738"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="mailto:thepraveen2023@gmail.com"> <i class="fa-solid fa-envelope"></i></a>
+                <a href="https://wa.me/+918778244738"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
 
             <a href="https://drive.google.com/file/d/1_rPIRql8H9MxfzZvYsMxFuPTc3cp_v2F/view?usp=drivesdk" class="btn">Download Cv</a>
@@ -190,7 +190,7 @@
         <center>
         <br>
         <br>
-        <a href="mailto:your-thepraveen2023@gmail.com" class="mails"><i class="fa-solid fa-envelope" id="mailone"></i>thepraveen2023@gmail.com</a>
+        <a href="mailto:thepraveen2023@gmail.com" class="mails"><i class="fa-solid fa-envelope" id="mailone"></i>thepraveen2023@gmail.com</a>
         <br>
         <a href="tel:+918778244738" class="calls"><i class="fa-solid fa-phone" id="callone"></i>+91 8778244738</a> </center>
     </section>
