--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#services">Experience</a>
-            <a href="#portfolio">Portfolio</a>
+            <a href="#portfolio">Porjects</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
